hphp/hack/test/sound_dynamic/typing/meth_call.bad.php
<?hh

class C {}

function f(dynamic $d) : void {
  $c = new C();
  $d->m(new C());
  $d->m($c);
  $d->m(vec[$c]);
}
